# evm

./: CMakeLists.txt  LICENSE  README.md  untitled.m
include/: euler_mag.hpp
src/: euler_mag.cpp  main.cpp
test/: test_baby.param
